@@ -1,0 +1,1 @@
+Make IDLE Settings dialog Help button work again.
